[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0.216", features = ["derive"] }
rand = "0.8.5"
rust-argon2 = "2.1.0"
tokio-postgres = "0.7.12"
postgres = "0.19.9"
serde_json = "1.0.133"